--- a/grid.html
+++ b/grid.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Album Using HTML and CSS</title>
     <link rel="logo" href="Logo.png">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="grid.css">
 </head>
 
 <body>
@@ -124,7 +124,7 @@
         </section>
         <footer>
             <p>&copy; 2023 - All Rights Reserved.</p>
-            <a href="/index.html">Back to Top</a>
+            <a href="/grid.html">Back to Top</a>
         </footer>
     </main>
 </body>
